monitoring/ingress/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-ingress
  namespace: monitoring

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - grafana.metatechz.store
      secretName: grafana-tls

  rules:
    - host: grafana.metatechz.store

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: prometheus-grafana

                port:
                  number: 80
